# plonkify

circom-compat/src/: lib.rs
plonkify/: Cargo.toml
plonkify/src/: custom_gate.rs  lib.rs  main.rs  plonkify.rs
plonkify/src/general/: bf_expansion.rs  expansion.rs  linear_only.rs  mod.rs  simple.rs
plonkify/src/vanilla/: greedy_bf.rs  mod.rs  optimized.rs  simple.rs
